Fix elements size and spacing

--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@ body {
     justify-content: center;
     background-color: #050517;
     color: #050517;
-    height: 85vh;
+    height: 90vh;
     width: 100vw;
-    min-height: 550px;
+    min-height: 650px;
     min-width: 800px;
     margin: 0;
+    transform: scale(1.2);
 }
 
 .container {
@@ -40,8 +41,9 @@ body {
     height: 60%;
     color: #D3D5D7;
     padding: 0 0 2px 0;
-    font-size: 31.5px;
+    font-size: 43px;
     font-family: "JetBrains Mono",monospace;
+    padding-bottom: 15px;
 }
 
 
